fix(abc:st): fix invalid link break in strict mode
- close https://github.com/ng-alain/ng-alain/issues/1636

--- a/packages/abc/st/style/index.less
+++ b/packages/abc/st/style/index.less
@@ -90,10 +90,10 @@
   @media screen and (min-width: @nz-table-rep-min-width) {
     &__width {
       &-strict {
-        .ant-table-body {
+        .ant-table-content {
           > table {
-            word-wrap: break-word;
-            table-layout: fixed;
+            word-wrap: break-word !important;
+            table-layout: fixed !important;
           }
         }
       }
